--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="subitems">
                 <p>before</p>
-                <img src="{{data}}" alt="">
+                <img src="" alt="">
             </div>
             <div class="subitems">
                 <p>after</p>
