--- a/templates/index.html
+++ b/templates/index.html
@@ -116,11 +116,11 @@
         <div class="item">
             <div class="subitems">
                 <p>before</p>
-                <img class="imagen" src="{{datas[0]}}" alt="no se pudo encontrar">
+                <img style="width: 100%;" class="imagen" src="{{datas[0]}}" alt="no se pudo encontrar">
             </div>
             <div class="subitems">
                 <p>after</p>
-                <img src="{{datas[1]}}" alt="">
+                <img style="width: 100%;" src="{{datas[1]}}" alt="">
             </div>
         </div>
         <div class="item2">
