--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,13 @@
                         </select>
                     </div>
                     <div class="subitems">
+                        <p>modelo o scatter</p>
+                        <label for="">Modelo</label>
+                        <input type="radio" name="modelo" value="si" required >
+                        <label for="">Scatter</label>
+                        <input type="radio" name="modelo" value="no" required>
+                    </div>
+                    <div class="subitems">
                         <p>tipo de regresion</p>
                         <select name="regresion" id="">
                             <option value="lineal">lineal</option>
