--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,17 @@
             display: flex;
             height: 100vh;
         }
+        @media (max-width: 400px) {
+            .item {
+            background-color: #1b2288;
+            }
+            .item2 {
+            background-color: rgb(148, 29, 29);
+            }
+
+        }
         .item {
-            background-color: aquamarine;
+            background-color: #0011ff;
             width: 40%;
         }
         .colordiferente {
@@ -33,7 +42,6 @@
     </style>
 </head>
 <body>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <div class="contenedor">
         <div class="item colordiferente">
             <form action="/visualize" method="post">
@@ -125,26 +133,6 @@
             </div>
         </div>
     </div>
-    <script>
-        $(".checks").on("click", function(){
-            if($( ".checks:checked").length > 2){
-                $('#btn').prop('disabled', true);
-            }
-            else {
-                $('#btn').prop('disabled', false);
-                $('#atipi').prop('disabled', false);
-                $('#atipi2').prop('disabled', false);
-                $('#FactorAlfa').prop('disabled', false);
-                $('#taman').prop('disabled', false);
-                $('#mode1').prop('disabled', false);
-                $('#model2').prop('disabled', false);
-                $('#drop1').prop('disabled', false);
-                $('#drop2').prop('disabled', false);
-                $('#drop3').prop('disabled', false);   
-            }
-        }
-        );
-    </script>
 </body>
 
 </html>
